--- a/index.css
+++ b/index.css
@@ -56,6 +56,11 @@ footer{
     text-decoration: none;
 }
 
+.fcol1 {
+    display: flex;
+    flex-direction: column;
+}
+
 .fcol1 img{
     cursor: pointer;
 }
@@ -82,12 +87,14 @@ footer{
 
 
 
-.lastline{
+.lastline {
     display: flex;
     bottom: 0px;
-    position:relative;
+    position: relative;
     padding: 2rem;
     /* width: 100vw; */
+    align-items: center;
+    justify-content: center;
 }
 
 .lastline span{
@@ -232,4 +239,88 @@ main button{
 }
 #more a{
     text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+
+/* footer css  */
+    .frow {
+        gap: 1rem;
+        margin-left: 0rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    .fcol1 {
+        align-items: center;
+        justify-content: center;
+    }
+    .lastline {
+        flex-direction: column;
+    }
+
+/* navbar css  */
+    nav {
+        padding: 1rem;
+        position: relative;
+        top: 0;
+        width: 100%;
+        /* height: 100%; */
+        font-size: 1.5rem;
+        background-color: aliceblue;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
+        color: navy;
+    }
+    nav span {
+        margin-right: 0rem;
+        margin-left: 0rem;
+        gap: 10px;
+
+    }
+    nav a {
+        margin-left: 0rem;
+        color: navy;
+    }
+
+
+/* main css  */
+
+
+    main {
+        height: 100%;
+    }
+    main p {
+        font-size: 3rem;
+        margin-left: 3rem;
+    }
+    main h2 {
+        font-size: 1.5rem;
+    }
+    .col {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        justify-content: center;
+    }
+    .col1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 0rem;
+        margin-top: 8rem;
+    }
+    .col2 {
+        width: 100%;
+    }
+    .pcardsa {
+        height: 100%;
+        padding: 2rem;
+        margin: 0;
+    }
+
+
 }
