--- a/components/places.css
+++ b/components/places.css
@@ -250,7 +250,7 @@ footer {
 
     /* places css  */
     .pcards{
-        flex-direction: row;
+        flex-direction: column;
         margin: 2rem;
         height: 100%;
     }
