--- a/components/places.css
+++ b/components/places.css
@@ -253,6 +253,7 @@ footer {
         flex-direction: column;
         margin: 2rem;
         height: 100%;
+        gap: 3rem;
     }
     .row1{
         flex-direction: column;
