--- a/index.css
+++ b/index.css
@@ -307,6 +307,7 @@ main button{
         justify-content: center;
     }
     .col1 {
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
