--- a/index.css
+++ b/index.css
@@ -323,6 +323,10 @@ main button{
         padding: 2rem;
         margin: 0;
     }
+    .pcarda1{
+        width:100%;
+        height:100%;
+    }
 
 
 }
