--- a/index.css
+++ b/index.css
@@ -324,8 +324,8 @@ main button{
         margin: 0;
     }
     .pcarda1{
-        width:100%;
-        height:100%;
+        width:16rem;
+        height:9rem;
     }
 
 
