--- a/index.css
+++ b/index.css
@@ -338,7 +338,7 @@ main button{
         font-size: 1rem;
     }
     .arrow_btna{
-        margin: 0;
+        margin: 3rem;
     }
     .arrow_icon{
         display: flex;
